Add youtube button

--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <title>Maku in Japan</title>
     <style type="text/css">
     a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
-    #logo { width: 193px; height: 288px; margin: 0 auto;  position: relative; top: 50%; transform: translateY(-50%);}
-    #logo img { width: 193px; height: 288px; }
+    #logo { width: 193px; height: 338px; margin: 0 auto;  position: relative; top: 50%; transform: translateY(-50%);}
+    #logo img { width: 193px; height: 288px;  }
+    #btn {
+        border: 1px solid #e74c3c;
+        padding: 5px 10px;
+        display: block;
+        margin: 30px auto;
+        text-align: center;
+        border-radius: 5px;
+        font-size: 20px;
+        color: #e74c3c;
+        text-decoration: none;
+    }
+    #btn:visited, #btn:active { color: #e74c3c;}
+    #btn:hover { background-color: #e74c3c; color: #fff; cursor: hand;}
     </style>
 </head>
 <body>
     <div id="logo">
         <img src="logo.png" alt="Maku in Japan" />
+        <a href="https://youtube.com/makuinjapan" id="btn">Visit Youtube</a>
     </div>
 </body>
 </html>
